# irodori-tts-serverless

./: .dockerignore  .gitignore  Dockerfile  README.md  handler.py  pyproject.toml  test_endpoint.py
.github/workflows/: build.yml
adapters/ema/: config.json
adapters/ema_live/: config.json  irodori_lora_metadata.json
adapters/hinano/: config.json
adapters/hinano_rec/: adapter_config.json  config.json
