[project]
name = "irodori-tts-serverless"
version = "0.1.0"
description = "RunPod Serverless wrapper for Irodori-TTS OpenAI-compatible server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "irodori-openai-tts @ git+https://github.com/Aratako/Irodori-TTS-Server.git",
    "runpod>=1.7.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
